--- a/siteWeb/echeancier.html
+++ b/siteWeb/echeancier.html
@@ -13,6 +13,7 @@
     }
   }
 </script>
+
 <head>
 
 <!-- Meta -->
@@ -66,7 +67,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item px-lg-2">
-          <a class="nav-link text-uppercase text-expanded" href="">Échéancier
+          <a class="nav-link text-uppercase text-expanded" style="font-weight: bold;" href="">Échéancier
               <span class="sr-only">(current)</span>
           </a>
         </li>
