--- a/siteWeb/listeClient.html
+++ b/siteWeb/listeClient.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<!--<html lang="en">
   <script>
     if (localStorage.getItem("passw") == null) {
         window.location.href = '/';
@@ -14,7 +14,7 @@
         }
     }
 </script>
-
+-->
 <head>
 
   <!-- Meta -->
@@ -99,7 +99,7 @@
             </a>
           </li>
           <li class="nav-item px-lg-2">
-            <a class="nav-link text-uppercase text-expanded" href="">Liste de Clients</a>
+            <a class="nav-link text-uppercase text-expanded" style="font-weight: bold;" href="">Liste de Clients</a>
           </li>
           <li class="nav-item px-lg-2">
             <a class="nav-link text-uppercase text-expanded" href="historique">Historique</a>
