--- a/siteWeb/historique.html
+++ b/siteWeb/historique.html
@@ -75,7 +75,7 @@
                         <a class="nav-link text-uppercase text-expanded" href="listeClient">Liste de Clients</a>
                     </li>
                     <li class="nav-item px-lg-2">
-                        <a class="nav-link text-uppercase text-expanded" href="">Historique</a>
+                        <a class="nav-link text-uppercase text-expanded" style="font-weight: bold;" href="">Historique</a>
                         <span class="sr-only">(current)</span>
                     </li>
                 </ul>
@@ -118,8 +118,8 @@
     <!--===============================================================================================-->
     <div>
         <form id="recherche" action="" onsubmit="" method="POST">
-            <input class="form-control" style="display:inline-block" placeholder="Ex: Cédric" id="prenomText">
-            <input type="text" class="form-control" style="display:inline-block" placeholder="Ex: Léveillé" id="nomText">
+            <input class="form-control" style="display:inline-block" placeholder="Ex: Cédric" onkeyup="SendSearchHistorique()" id="prenomText">
+            <input type="text" class="form-control" style="display:inline-block" placeholder="Ex: Léveillé" onkeyup="SendSearchHistorique()"id="nomText">
             <input id="Recherche" value="Recherche" style="display:inline-block" class="btn btn-primary" type="submit" />
         </form>
     </div>
@@ -138,63 +138,13 @@
         </div>
 
         <div class="table100-body js-pscroll">
-            <table>
+            <table id = "myTable">
                 <tbody>
                     <tr class="row100 body">
                         <td class="cell100 column1">Erwin</td>
                         <td class="cell100 column2">Nzia</td>
                         <td class="cell100 column3">298 everest pvt</td>
                     </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
-
-
                 </tbody>
             </table>
         </div>
@@ -209,7 +159,40 @@
     <!-- Javascript -->
     <!--===============================================================================================-->
     <script src="vendor/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-    <script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script language="JavaScript">
+        var socket = io.connect('http://localhost:8080');
+		var pseudo = 1;
+		socket.emit('getDBClient');
+		socket.on('DataBase', function(rows) {
+        var table = document.getElementById("myTable");
+		var table_len=(table.rows.length)-1;
+        for (var i=0; i<rows.length; i++) {
+			var row = table.insertRow(i);
+			var cell1 = row.insertCell(0);
+			var cell2 = row.insertCell(1);
+			var cell3 = row.insertCell(2);
+			
+			console.log(row.fulldata);
+			cell1.innerHTML =  String(rows[i][1]);
+			cell2.innerHTML =  String(rows[i][2]);
+			cell3.innerHTML =  String(rows[i][3]);
+			
+			//cell5.innerHTML =  "<td class='cell100 column4' id = 'btno'><button type='button' onClick='getinfo("+i+")'>Edit</button></td>";
+			
+			//css pour les cellules
+			row.className='row100 body';
+			cell1.className='cell100 column1';
+			cell2.className='cell100 column2';
+			cell3.className='cell100 column3';
+			
+			cell1.id='nom'+i;
+			cell2.id='prenom'+i;
+			cell3.id='adresse'+i;
+			
+        }   
+        console.log(rows);
+      });
         $('.js-pscroll').each(function () {
             var ps = new PerfectScrollbar(this);
 
@@ -223,6 +206,12 @@
             localStorage.removeItem("passw");
             localStorage.removeItem("time");
             window.location.href = '/';
+        }
+
+        function SendSearchHistorique() {
+            var nom = document.getElementById("nomText").value;
+            var prenom = document.getElementById("prenomText").value;
+            socket.emit('SendSearchHistorique', {nom: nom, prenom: prenom });
         }
     </script>
     <!--===============================================================================================-->
