--- a/siteWeb/historique.html
+++ b/siteWeb/historique.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<script>
+<<script>
     if (localStorage.getItem("passw") == null) {
         window.location.href = '/';
     } else {
@@ -118,19 +118,17 @@
     <!--===============================================================================================-->
     <div>
         <form id="recherche" action="" onsubmit="" method="POST">
-            <input class="form-control" style="display:inline-block" placeholder="Ex: Cédric" onkeyup="SendSearchHistorique()" id="prenomText">
-            <input type="text" class="form-control" style="display:inline-block" placeholder="Ex: Léveillé" onkeyup="SendSearchHistorique()"id="nomText">
-            <input id="Recherche" value="Recherche" style="display:inline-block" class="btn btn-primary" type="submit" />
+            <input class="form-control" style="display:inline-block" placeholder="Ex: Cédric Leveille" onkeyup="SendSearchHistorique()" id="nomText">
         </form>
     </div>
-    <div class="table100 ver1 m-b-110">
+    <div class="table100 ver2 m-b-110">
         <div class="table100-head">
             <table>
                 <thead>
                     <tr class="row100 head">
-                        <th class="cell100 column1">Date Production</th>
+                        <th class="cell100 column1">Niveau liquide atteint</th>
                         <th class="cell100 column2">Température</th>
-                        <th class="cell100 column3">Niveau liquide atteint</th>
+                        <th class="cell100 column3">Date Production</th>
 
                     </tr>
                 </thead>
@@ -140,11 +138,7 @@
         <div class="table100-body js-pscroll">
             <table id = "myTable">
                 <tbody>
-                    <tr class="row100 body">
-                        <td class="cell100 column1">Erwin</td>
-                        <td class="cell100 column2">Nzia</td>
-                        <td class="cell100 column3">298 everest pvt</td>
-                    </tr>
+                   
                 </tbody>
             </table>
         </div>
@@ -163,20 +157,22 @@
     <script language="JavaScript">
         var socket = io.connect('http://localhost:8080');
 		var pseudo = 1;
-		socket.emit('getDBClient');
-		socket.on('DataBase', function(rows) {
+		socket.emit('getDBHistorique');
+		socket.on('DataBaseHistorique', function(rows) {
         var table = document.getElementById("myTable");
 		var table_len=(table.rows.length)-1;
         for (var i=0; i<rows.length; i++) {
 			var row = table.insertRow(i);
 			var cell1 = row.insertCell(0);
 			var cell2 = row.insertCell(1);
-			var cell3 = row.insertCell(2);
+            var cell3 = row.insertCell(2);
+
 			
 			console.log(row.fulldata);
-			cell1.innerHTML =  String(rows[i][1]);
-			cell2.innerHTML =  String(rows[i][2]);
-			cell3.innerHTML =  String(rows[i][3]);
+			cell1.innerHTML =  String(rows[i][0]);
+			cell2.innerHTML =  String(rows[i][1]);
+            cell3.innerHTML =  String(rows[i][2]);
+
 			
 			//cell5.innerHTML =  "<td class='cell100 column4' id = 'btno'><button type='button' onClick='getinfo("+i+")'>Edit</button></td>";
 			
@@ -210,8 +206,7 @@
 
         function SendSearchHistorique() {
             var nom = document.getElementById("nomText").value;
-            var prenom = document.getElementById("prenomText").value;
-            socket.emit('SendSearchHistorique', {nom: nom, prenom: prenom });
+            socket.emit('SendSearchHistorique', {nom: nom});
         }
     </script>
     <!--===============================================================================================-->
